--- a/8_tests/src/average_maps.Rmd
+++ b/8_tests/src/average_maps.Rmd
@@ -61,6 +61,8 @@ ggsave(plot = plot, filename = 'figs/overall.png', width = 6, height = 5)
 #### One-sample and two-sample wilcoxon for each condition
 
 ```{r}
+channels <- as.character(c(1:128))
+
 get_inverted_list <- function(channels, list) {
   inverted_list <- channels[!channels %in% list]
   return(inverted_list)
@@ -149,7 +151,6 @@ get_ps <- function(data, condition, channels){
 
 ```{r}
 # Identify channels that differentiate between same and different talker and channels that don't
-channels <- as.character(c(1:128))
 talker_channels <- get_sig_channels(two_sample_w, "talker")
 nodiff_talker_channels <- get_inverted_list(channels, talker_channels)
 
@@ -239,37 +240,91 @@ sum(high < 0.01, na.rm = TRUE)
 
 #### Wilcoxon with interaction by constraint
 
-```{r}
+**Talker and low constraint**
 
-plot <- ggplot() +
-  geom_point(data = overall, aes(x = x, y = y, 
-                                    size = 1/p, 
-                                    alpha = 0.5,
-                                    stroke = 0)) +
-  geom_point(data = overall, aes(x = x, y = y, 
-                                    size = 1,
-                                    alpha = 0.5,
-                                    stroke = 0)) + 
-  scale_size_continuous(name = "p", 
-                        limits = c(1, 1000),
-                        breaks = c(20, 100, 200), 
-                        labels = c("0.05", "0.01", "0.005")) +
-  guides(alpha = FALSE) +
-  ylim(0, 900) +
-  xlim(0, 900) +
-  annotate("text", x=20, y=5, label= "L", alpha = 0.8) +
-  annotate("text", x=880, y=5, label= "R", alpha = 0.8) +
-  theme(axis.line=element_blank(),axis.text.x=element_blank(),
-        axis.text.y=element_blank(),axis.ticks=element_blank(),
-        axis.title.x=element_blank(),
-        axis.title.y=element_blank(),
-        panel.background=element_blank(),
-        panel.border=element_blank(),
-        panel.grid.major=element_blank(),
-        panel.grid.minor=element_blank(),
-        plot.background=element_blank())
+```{r}
+# Identify channels that differentiate between same and different talker and channels that don't
+talker_L_interaction_channels <- get_sig_channels(interaction_two_sample_w, "talker_L")
+nodiff_talker_L_interaction_channels <- get_inverted_list(channels, talker_L_interaction_channels)
+
+# Get p-values for tracking within each level
+SL <- get_ps(interaction_w, "SL", talker_L_interaction_channels)
+TL <- get_ps(interaction_w, "TL", talker_L_interaction_channels)
+nodiff_SL <- get_ps(interaction_w, "SL", nodiff_talker_L_interaction_channels)
+nodiff_TL <- get_ps(interaction_w, "TL", nodiff_talker_L_interaction_channels)
+
+# Create data frame for bubbles
+talker_L_interaction_df <- data.frame(group1 = SL, group2 = TL, nodiff_group1 = nodiff_SL, nodiff_group2 = nodiff_TL, coordinates)
+
+# Plot
+plot <- get_map(talker_L_interaction_df, talker_L_interaction_channels, nodiff_talker_L_interaction_channels, c("Different talker low constraint", "Same-talker low constraint"))
 plot
-ggsave(plot = plot, filename = 'figs/overall.png', width = 6, height = 5)
+ggsave(plot = plot, filename = 'figs/talker_L.png', width = 12, height = 5)
+```
+
+**Talker and high constraint**
+```{r}
+# Identify channels that differentiate between same and different talker and channels that don't
+talker_H_interaction_channels <- get_sig_channels(interaction_two_sample_w, "talker_H")
+nodiff_talker_H_interaction_channels <- get_inverted_list(channels, talker_H_interaction_channels)
+
+# Get p-values for tracking within each level
+SH <- get_ps(interaction_w, "SH", talker_H_interaction_channels)
+TH <- get_ps(interaction_w, "TH", talker_H_interaction_channels)
+nodiff_SH <- get_ps(interaction_w, "SH", nodiff_talker_H_interaction_channels)
+nodiff_TH <- get_ps(interaction_w, "TH", nodiff_talker_H_interaction_channels)
+
+# Create data frame for bubbles
+talker_H_interaction_df <- data.frame(group1 = SH, group2 = TH, nodiff_group1 = nodiff_SH, nodiff_group2 = nodiff_TH, coordinates)
+
+# Plot
+plot <- get_map(talker_H_interaction_df, talker_H_interaction_channels, nodiff_talker_H_interaction_channels, c("Different talker high constraint", "Same-talker high constraint"))
+plot
+ggsave(plot = plot, filename = 'figs/talker_H.png', width = 12, height = 5)
+```
+
+**Meaning and low constraint**
+
+```{r}
+# Identify channels that differentiate between same and different talker and channels that don't
+meaning_L_interaction_channels <- get_sig_channels(interaction_two_sample_w, "meaning_L")
+nodiff_meaning_L_interaction_channels <- get_inverted_list(channels, meaning_L_interaction_channels)
+
+# Get p-values for tracking within each level
+ML <- get_ps(interaction_w, "ML", meaning_L_interaction_channels)
+NL <- get_ps(interaction_w, "NL", meaning_L_interaction_channels)
+nodiff_ML <- get_ps(interaction_w, "ML", nodiff_meaning_L_interaction_channels)
+nodiff_NL <- get_ps(interaction_w, "NL", nodiff_meaning_L_interaction_channels)
+
+# Create data frame for bubbles
+meaning_L_interaction_df <- data.frame(group1 = ML, group2 = NL, nodiff_group1 = nodiff_ML, nodiff_group2 = nodiff_NL, coordinates)
+
+# Plot
+plot <- get_map(meaning_L_interaction_df, meaning_L_interaction_channels, nodiff_meaning_L_interaction_channels, c("Meaningful low constraint", "Nonsense low constraint"))
+plot
+ggsave(plot = plot, filename = 'figs/meaning_L.png', width = 12, height = 5)
+```
+
+**Meaning and high constraint**
+
+```{r}
+# Identify channels that differentiate between same and different talker and channels that don't
+meaning_H_interaction_channels <- get_sig_channels(interaction_two_sample_w, "meaning_H")
+nodiff_meaning_H_interaction_channels <- get_inverted_list(channels, meaning_H_interaction_channels)
+
+# Get p-values for tracking within each level
+MH <- get_ps(interaction_w, "MH", meaning_H_interaction_channels)
+NH <- get_ps(interaction_w, "NH", meaning_H_interaction_channels)
+nodiff_MH <- get_ps(interaction_w, "MH", nodiff_meaning_H_interaction_channels)
+nodiff_NH <- get_ps(interaction_w, "NH", nodiff_meaning_H_interaction_channels)
+
+# Create data frame for bubbles
+meaning_H_interaction_df <- data.frame(group1 = MH, group2 = NH, nodiff_group1 = nodiff_MH, nodiff_group2 = nodiff_NH, coordinates)
+
+# Plot
+plot <- get_map(meaning_H_interaction_df, meaning_H_interaction_channels, nodiff_meaning_H_interaction_channels, c("Meaningful high constraint", "Nonsense high constraint"))
+plot
+ggsave(plot = plot, filename = 'figs/meaning_H.png', width = 12, height = 5)
 ```
 
 #### T-tests against difference set by low vs high-constraint sentences
